# MiniCalc

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.idx/: dev.nix
pages/: bac1.py  bac2.py  bac3.py  bac4.py  hept2an.py  hept3an.py  maytinh.py
