[project]

name = "MiniCalc"
version = "1.0.9"
description = "A mini calculator app"
authors = [
  {name = "Tu Tran", email = "trantu02101986@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.1", "numpy"
]

[tool.flet]
org = "com.android.minicalc" 
product = "MiniCalc" 
copyright = "Copyright (C) 2024 by Tu Tran" 
build_number = 1 
app.module = "main" 
app.path = "src" 
app.exclude = ["assets"] 
compile.app = false 
compile.packages = false 
compile.cleanup = false 

[tool.flet.android]
split_per_abi = false 